--- a/website user interface/Employees.html
+++ b/website user interface/Employees.html
@@ -22,7 +22,42 @@
         </div>
       </nav>
       <div>
-        <h2>New Website</h2>
+        <h2 class="ml-4">Employees</h2>
+      </div><br>
+      <div class="container">
+        <div class="row">
+            <div class="column-8">
+                <table class="table table-hover">
+                    <thead>
+                        <th>ID</th>
+                        <th>NAME</th>
+                        <th>SALARY</th>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>101</td>
+                            <td>vicky</td>
+                            <td>25000</td>
+                        </tr>
+                        <tr>
+                            <td>102</td>
+                            <td>vasanth</td>
+                            <td>28000</td>
+                        </tr>
+                        <tr>
+                            <td>103</td>
+                            <td>subash</td>
+                            <td>30000</td>
+                        </tr>
+                        <tr>
+                            <td>104</td>
+                            <td>venkatesh</td>
+                            <td>35000</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
       </div>
     
 </body>
