--- a/website user interface/Home.html
+++ b/website user interface/Home.html
@@ -21,9 +21,10 @@
             </ul>
         </div>
     </nav>
+    <div></div>
     <div>
         <h2 class="ml-4">Home Page</h2>
-    </div>
+    </div><br>
     <div class="container">
         <div class="row">
             <div class="column-10">
@@ -44,7 +45,7 @@
                         adipisci laborum exercitationem eaque? Saepe doloremque quas incidunt.</li>
                     <li>Molestiae recusandae fugit nulla architecto dolor dignissimos
                         asperiores consequatur quisquam? Aut quaerat sed non voluptatibus
-                        a illo assumenda corporis doloremque architecto impedit?</li>
+                        a illo assumenda corporis doloremque architecto impedit.</li>
                 </ul>
             </div>
         </div> 
