--- a/website user interface/Contact us.html
+++ b/website user interface/Contact us.html
@@ -21,9 +21,29 @@
             </ul>
         </div>
       </nav>
+      <div></div>
       <div>
-        <h2>New Website</h2>
+        <h2 class="ml-4">Contact us</h2>
+      </div><br>
+      <div class="container">
+        <div class="row">
+            <div class="column-6">
+                <span><ul><li>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Doloremque asperiores dolorem veniam, soluta facere minima quibusdam 
+                    quisquam ad rem numquam officia eum corporis, alias nobis, laboriosam nisi ipsa optio at!</li>
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Modi perferendis distinctio quam facilis rem doloremque, 
+                    aut accusamus dignissimos suscipit porro ut nesciunt fugiat 
+                    expedita illo fuga aliquid ipsum reiciendis pariatur.</li></ul></span>
+            </div>
+            <div class="column-6">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.1459753299264!2d77.69882621408985!3d12.962509518586673!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae10d5b2786a23%3A0xb08461de6796aef8!2sGreet%20Labs%20Private%20Limited!5e0!3m2!1sen!2sin!4v1680157754246!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
+        
       </div>
+
     
 </body>
 </html>
